Resolved Layout Issues

--- a/css/ecommerce-page.css
+++ b/css/ecommerce-page.css
@@ -219,6 +219,9 @@ i.fa-th-list {
 }
 
 .grid .product {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
   width: 300px;
   padding-bottom: 30px;
 }
@@ -232,11 +235,18 @@ i.fa-th-list {
 }
 
 .grid .product-info {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  height: 200px;
   text-align: center;
   padding: 0 20px 30px;
 }
 
 .grid .product-action {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
   padding-top: 30px;
   border-top: 1px solid #8d8ba5;
 }
@@ -248,6 +258,10 @@ i.fa-th-list {
 }
 
 .lines .product {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  width: 100%;
   padding: 20px;
   display: flex;
 }
@@ -264,11 +278,17 @@ i.fa-th-list {
 }
 
 .lines .product-info {
-  gap: 10px;
-  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  padding: 20px 20px 15px;
 }
 
 .lines .product-action {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 20px;
   padding-left: 10px;
 }
 
